# streamlit_demo

./: .gitignore  LICENSE  Makefile  main.py  page_main.py  pyproject.toml  requirements.txt
modules/: __init__.py
pages/: basic.py  chart.py  chat.py  chat_allow_files.py  chat_manual_iter.py  chat_with_images.py  chat_with_resoning.py  chat_with_tools.py  chat_with_tools_and_confirm_by_callback.py  chat_with_tools_and_confirm_by_flow_state.py  chat_with_tools_and_confirm_by_rerun.py  chat_with_tools_and_confirm_by_rerun_in_fragment.py  chat_with_tools_and_confirm_in_dialog.py  context.py  cookie_magager.py  cookies.py  data_editor.py  dynamic_componet.py  echart.py  emoji_rain.py  empty.py  extras_demo.py  feedback.py  floating_button.py  footer.py  fragment.py  global_exception.py  iframe.py  jinja_live_parser.py  llm_price.py  modal.py  plot.py  selectbox.py  statstics.py  status.py  tab.py  todo.py  tree_select.py
