[project]
name = "streamlit-demo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "streamlit>=1.44.1",
    "streamlit-elements>=0.1.0",
    "streamlit-extras>=0.7.1",
    "streamlit-nested-layout>=0.1.4",
]

[dependency-groups]
dev = [
    "watchdog>=6.0.0",
]
